@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.131 2004/12/18 04:56:21 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.132 2004/12/29 15:51:43 wolf31o2 Exp $
+
+  29 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript-support/livecdfs-update.sh:
+  Cleanup on livecdfs-update.sh script and testing a possible bashlogin fix.
 
   17 Dec 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py:
   fix for #73851
